--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,8 @@
 }
 
 body {
+  width: 100vw;
+  height: 120vh;
   margin: 0;
   font-family: "Nunito", sans-serif;
   color: var(--main-font-color);
@@ -52,4 +54,29 @@ p {
 }
 .title {
   text-align: center;
+}
+.flex {
+  width: 85%;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  margin: auto;
+}
+
+.card {
+  font-weight: bold;
+  margin: 20px;
+  width: 200px;
+  height: 200px;
+  border: 1px solid grey;
+  background-color: var(--white);
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  align-content: space-around;
+  justify-content: center;
+}
+.card img {
+  margin: auto;
+  width: 150px;
 }
